[2025-12-27T02:11:03.800Z] BACKUP: Fichier créé: strapi-backup-2025-12-27T02-11-03-778Z.db.tar.gz